# pPython

./: CONTRIBUTING.md  INSTALLATION.txt  LICENSE  MANIFEST.in  README.md  USAGE.txt  pyproject.toml  setup.cfg  setup.py
PythonMPI/: README.md
PythonMPI/examples/: basic.py  basic_app.py  basic_app2.py  (+9 more)
examples/: run_llsc.py
grid/: check_allowance.py  check_runtime.py  check_triples.py  gen_cpu_list.py  get_cpu_info.py  grid_abort.py  grid_config.py  grid_config_init.py  grid_resource_policy.py  grid_run.py  grid_status.py  launch_non_triples.py  launch_with_triples.py  set_remote_cc.py  slurm2hostmap.py  slurm_submit_job.py  slurm_write_job_script.py
local/: grid_config_local.py  pyMPI_Comm_settings_local.py
scripts/: RUN.py  RUN_on_src.py  update_run_script.sh  update_run_scripts.sh
src/: BcastMsg.py  LineSgmt.py  MPI_Abort.py  MPI_Run.py  ProbeMsg.py  RecvMsg.py  SendMsg.py  check_allowance.py  check_mount.py  detect_transport.py  display.py  exec_shell_cmd.py  falls_intersection.py  gagg.py  gagg_add.py  gen_falls.py  gen_pitfalls.py  get_global_ind.py  get_ind_range.py  get_local_falls.py  get_local_ind.py  get_local_proc.py  gridPython.py  gridPython_Ver.py  gridPython_all.py  gridPython_init.py  gridPython_ver.py  grid_Abort.py  grid_Run.py  grid_config_init.py  grid_gagg.py  grid_run.py  grid_status.py  intersect_mtlb.py  lcm.py  local_dims.py  ls_intersection.py  multicast.py  n_dim_find.py  pPython.py  (+15 more)
test/: QA_ALL_WITH_LOG.sh  README  qa_all.sh  qa_functions.sh  qa_run_on_llsc.py  run_all_dirs.sh
tutorials/: pPython-Lunch-N-Learn-LLSC.ipynb
(+707 files in other folders)
