[metadata]
name = pypPython
version = 0.9.6
author = Chansup Byun
author_email = cbyun@ll.mit.edu
description = A parallel Python tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.llgrid.ll.mit.edu/llgrid/pPython/
project_urls =
    Bug Tracker = https://gitlab.llgrid.ll.mit.edu/llgrid/pPython/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pypPython
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
